fixed text alignment

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body{
 	font-family: sans-serif;
 }
 #p2{
+	text-align: center;
 	font-family: sans-serif;
 	font-size: 13pt;
 	margin-left: 300px;
